--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -37,51 +37,51 @@
 name: OSV-Scanner
 
 on:
-  pull_request:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  merge_group:
-    branches: ['main']
-  schedule:
-    - cron: '39 12 * * 1' # Runs every Monday at 12:39 PM UTC; https://crontab.guru/#39_12_*_*_1
-  push:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  workflow_dispatch:
+    pull_request:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    merge_group:
+        branches: ["main"]
+    schedule:
+        - cron: "39 12 * * 1" # Runs every Monday at 12:39 PM UTC; https://crontab.guru/#39_12_*_*_1
+    push:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    workflow_dispatch:
 
 permissions:
-  # Require writing security events to upload SARIF file to security tab
-  security-events: write
-  # Read commit contents
-  contents: read
-  actions: read
+    # Require writing security events to upload SARIF file to security tab
+    security-events: write
+    # Read commit contents
+    contents: read
+    actions: read
 
 concurrency:
-  group: osv-scanner-${{ github.ref }}
-  cancel-in-progress: false
+    group: osv-scanner-${{ github.ref }}
+    cancel-in-progress: false
 
 jobs:
-  scan-scheduled:
-    if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}
-    uses: 'google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@40a8940a65eab1544a6af759e43d936201a131a2' # v2.0.3
-    with:
-      scan-args: electron-app/package-lock.json
-  scan-pr:
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }}
-    uses: 'google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@40a8940a65eab1544a6af759e43d936201a131a2' # v2.0.3
-    with:
-      scan-args: electron-app/package-lock.json
+    scan-scheduled:
+        if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}
+        uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@40a8940a65eab1544a6af759e43d936201a131a2" # v2.0.3
+        with:
+            scan-args: electron-app/package-lock.json
+    scan-pr:
+        if: ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }}
+        uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@40a8940a65eab1544a6af759e43d936201a131a2" # v2.0.3
+        with:
+            scan-args: electron-app/package-lock.json
