--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -412,10 +412,11 @@
     "stylelint-config-standard": "^39.0.0",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
-    "vitest": "3.2.4"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@garmin/fitsdk": "^21.178.0",
+    "@vitest/ui": "^3.2.4",
     "electron-conf": "^1.3.0",
     "electron-log": "^5.4.3",
     "electron-updater": "6.6.7"
