--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -384,6 +384,7 @@
     "@actions/http-client": "^2.2.3",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.2",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
     "@eslint/css": "0.11.1",
     "@eslint/js": "^9.37.0",
     "@eslint/json": "^0.13.2",
@@ -408,9 +409,19 @@
     "electron-vite": "^4.0.1",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-no-unsanitized": "^4.1.4",
     "eslint-plugin-perfectionist": "^4.15.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-regexp": "^2.10.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unicorn": "^61.0.2",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "git-cliff": "^2.10.1",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
