--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -271,6 +271,7 @@
         "datatables.net": "^2.3.6",
         "datatables.net-dt": "^2.3.6",
         "date-fns": "^4.1.0",
+        "dompurify": "^3.3.1",
         "electron-conf": "^1.3.0",
         "electron-log": "^5.4.3",
         "electron-updater": "^6.7.3",
@@ -285,9 +286,14 @@
         "leaflet.locatecontrol": "^0.86.0",
         "leaflet.markercluster": "^1.5.3",
         "maplibre-gl": "^5.16.0",
-        "screenfull": "^6.0.2"
+        "p-limit": "^4.0.0",
+        "screenfull": "^6.0.2",
+        "zod": "^4.3.5"
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/dompurify": "^3.0.5",
         "@actions/artifact": "^5.0.2",
         "@actions/attest": "^2.2.0",
         "@actions/cache": "^5.0.2",
@@ -320,6 +326,7 @@
         "eslint-plugin-n": "^17.23.2",
         "eslint-plugin-perfectionist": "^5.3.1",
         "eslint-plugin-unicorn": "^62.0.0",
+        "fast-check": "^4.5.3",
         "git-cliff": "^2.11.0",
         "globals": "^17.0.0",
         "jsdom": "^27.4.0",
